stop tabs from wrapping EVER, and added very janky padding class .nexttosort

--- a/h/css/app.scss
+++ b/h/css/app.scss
@@ -332,3 +332,11 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
     display: inline;
   }
 }
+
+
+//NEXTOSORT TABS
+.nexttosort {
+  .nav-tabs {
+    padding-right: 40px;
+  }
+}
